--- a/Teste DTI 2.csproj
+++ b/Teste DTI 2.csproj
@@ -17,4 +17,9 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
+
+  <PropertyGroup>
+  <NoWarn>7022;2005;3000</NoWarn>
+ </PropertyGroup>
+
 </Project>
